# github-daily-radar

./: .gitignore  README.md  pyproject.toml  seed_repos.yaml
.github/workflows/: daily-radar.yml  preview-card.yml
artifacts/state/: history.json  history.jsonl
artifacts/state/daily/: 2026-04-02.json  2026-04-03.json  2026-04-04.json  2026-04-05.json  2026-04-06.json  2026-04-07.json  2026-04-08.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json
config/: radar.yaml
docs/superpowers/plans/: 2026-04-02-github-daily-radar-single-card-ai-focus-plan.md  (+4 more)
scripts/: sync_state_branch.sh
src/github_daily_radar/: client.py  config.py  daily_brief.py  discovery.py  intelligence.py  main.py  models.py  preview.py
tests/: test_bootstrap.py  test_buzzing.py  test_client.py  test_config.py  test_daily_brief.py  test_digest.py  test_discovery.py  test_discussion_collectors.py  test_feishu.py  test_intelligence.py  test_llm.py  test_main_pipeline.py  test_models.py  test_normalize.py  test_ossinsight_collector.py  test_preview.py  test_repo_skill_collectors.py  test_skill_collector.py  test_state_store.py  test_workflow_config.py
(+30 files in other folders)
